examples/test/testpolicy17081.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17081
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key24: value25
      key13: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value47
          key2: value26
          key38: value1
      podSelector:
        matchLabels:
          key8: value12
